--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -68,12 +68,16 @@
     background-color: var(--f7-list-item-border-color);
     display: block;
     z-index: 15;
-    top: auto;
-    right: auto;
-    bottom: 0;
-    left: 0;
+    top: 0;
+    right: 0;
+    bottom: auto;
+    left: auto;
     height: 1px;
     width: 100%;
     transform-origin: 50% 100%;
     transform: scaleY(calc(1 / var(--f7-device-pixel-ratio)));
+}
+
+.list .item-inner:after {
+    background-color: transparent;
 }
