Added unique tabs on bundles view type

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -81,3 +81,12 @@
 .list .item-inner:after {
     background-color: transparent;
 }
+.tabs .tab .toolbar {
+    top: 0;
+}
+.page-content {
+    padding: 0;
+}
+.type {
+    width: 20%;
+}
