--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -228,3 +228,18 @@ button {
 .dummy {
     opacity: 0;
 }
+
+.progress {
+    background-color: black;
+    border-radius: 13px;
+    /* (height of inner div) / 2 + padding */
+    padding: 2px;
+  }
+
+.progress>div {
+    background-color: blue;
+    width: 50%;
+    /* Adjust with JavaScript */
+    height: 20px;
+    border-radius: 10px 0 0 10px;
+}
