--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -55,7 +55,7 @@
 }
 
 .page .toolbar, .page .navbar {
-    background-color: #269624
+    background-color: #269624;
 }
 
 .tabbar .tab-link {
@@ -232,15 +232,19 @@ button {
 /* Progress bar in bundles view */
 .progress {
     background-color: black;
-    border-radius: 13px;
+    border-radius: 25px;
     /* (height of inner div) / 2 + padding */
-    padding: 2px;
+    padding: 3px;
   }
 
 .progress>div {
     background-color: #007aff;
     width: 0%;
     /* Adjust with JavaScript */
-    height: 20px;
-    border-radius: 10px 0 0 10px;
+    height: 30px;
+    border-radius: 25px 0 0 25px;
+}
+.complete {
+    color: #269624;
+    text-decoration: line-through;
 }
